--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
     <!--컨텐츠-->
     <div id="contents">
-        <div id="top_image"><img src="images/coffee-2801325_1920.jpg"></div>
+        <div id="top_image"><img src="images/coffee-2801325_1920.jpg" width="500" height="100"></div>
     </div>
 
 
