--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>I Love Coffee!!</title>
+    <style>
+        div#top_menu_fixed{
+            
+        }
+        div#top_menu_fixed_right{
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
