--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         div#top_menu_fixed_right{
             margin: 0px;
         }
+        div#top_logo{
+            vertical-align:middle;
+        }
     </style>
 </head>
 <body>
